fixed file card overflow

--- a/src/styles/Cards/FileCard.scss
+++ b/src/styles/Cards/FileCard.scss
@@ -11,6 +11,10 @@
         font-size: 16px;
         line-height: 24px;
         color: #1e7eef;
+        text-overflow: ellipsis;
+        display: inline-block;
+        white-space: nowrap;
+        overflow: hidden;
     }
     .file-card-info {
         display: flex;
